--- a/Code/index.html
+++ b/Code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=0.85"/>
 
   <!-- Title -->
   <title>Jamie Vos</title>
@@ -59,6 +59,71 @@
     </div>
   </header>
 
+  <section class="hero-section">
+    <div class="card-grid">
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url('../Foto\'s/577x1047_Country.jpg');"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </li>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+        </div>
+      </a>
+    <div>
+  </section>
+
   <section class="section section-a" id="About">
     <section class="about">
       <div class="content show" data-aos="zoom-in">
@@ -92,58 +157,13 @@
     <p></p>
   </section>
 
-  <section class="section section-b" id="section-2">
-    <div class="container" data-aos="fade-right">
-      <div class="skill-bars">
-        <div class="bar">
-          <div class="info">
-            <span>HTML</span>
-          </div>
-          <div class="progress-line html">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>CSS</span>
-          </div>
-          <div class="progress-line css">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>PHP</span>
-          </div>
-          <div class="progress-line jquery">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>JavaScript</span>
-          </div>
-          <div class="progress-line python">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>React</span>
-          </div>
-          <div class="progress-line mysql">
-            <span></span>
-          </div>
-        </div>
-      </div>
+
+
+  <footer>
+    <div class="container text-center">
+      <small>Copyright &copy; Jamie Vos</small>
     </div>
-
-  </section>
-
-  <section class="section section-c" id="section-3">
-      <p>Hey</p>
-  </section>
-
+  </footer>
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
