--- a/Code/projects.html
+++ b/Code/projects.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="Css/projects.css">
+  <link rel="stylesheet" type="text/css" href="Css/projects.css">
   <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
@@ -39,84 +39,94 @@
     </div>
   </div>
 
-  <!-- <section id="projects">
-    <div class="card-container">
-      project-card changed to project-tile
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Input-Output</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+  <section class="hero-section">
+    <div class="card-grid">
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="JavaScript Algorithm Playground">
-        <div class="project-desc">
-          <p>Arcade Mechanics</p>
-          <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" target="_blank"
-            class="view-project-button">View Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557187666-4fd70cf76254?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </li>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-      <div class="project-tile">
-        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-        <div class="project-desc">
-          <p>Politie ZO challenge</p>
-          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-            Project</a>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
         </div>
-      </div>
-
-    </div>
-  </section> -->
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
+        </div>
+      </a>
+      <a class="card" href="#">
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__content">
+          <p class="card__category">Category</p>
+          <h3 class="card__heading">Example Card Heading</h3>
+        </div>
+      </a>
+    <div>
+  </section>
 
   <script src="Js/app.js"></script>
 </body>
