--- a/Code/index.html
+++ b/Code/index.html
@@ -145,18 +145,13 @@
             I love learning. If you use programming languages or tools that I have not already mastered, I probably
             already heard about it and I definitely am confident that I can quickly become proficient with it.
             <br><br>
-            I am interested in various topics. Pure development, architecture and clean code, scalability and
-            performance concerns, monitoring and SRE are all topics that I am interested in. And there are a lot more!
+            Still wanna know more?
+            <button></button>
           </p>
         </div>
       </div>
     </section>
   </section>
-
-  <section class="section section-d" id="section-4">
-    <p></p>
-  </section>
-
 
 
   <footer>
