Foto's toegevoegd aan card

--- a/Code/index.html
+++ b/Code/index.html
@@ -48,7 +48,7 @@
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
-      <video src="Foto's/Walking Around The Forest.mp4" type="video/mp4" autoplay="autoplay" loop="true"
+      <video src="/Foto's/Walking Around The Forest.mp4" type="video/mp4" autoplay="autoplay" loop="true"
         muted="true"></video>
     </div>
     <div class="header-overlay"></div>
@@ -72,12 +72,12 @@
         </div>
       </a>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');"></div>
         <div class="card__content">
         </div>
       </li>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url('../Foto\'s/123.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
@@ -146,7 +146,7 @@
             already heard about it and I definitely am confident that I can quickly become proficient with it.
             <br><br>
             Still wanna know more?
-            <button></button>
+          
           </p>
         </div>
       </div>
