--- a/Code/index.html
+++ b/Code/index.html
@@ -32,7 +32,7 @@
     </label>
     <ul class="list">
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="projects.html">Skills</a></li>
       <li><a href="#">Blog</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
@@ -59,24 +59,24 @@
     </div>
   </header>
 
-  <section class="hero-section">
+  <section class="hero-section" >
     <div class="card-grid">
-      <a class="card" href="#">
+      <a data-aos="zoom-in" class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
-      <a class="card" href="#">
+      <a data-aos="zoom-in" class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/577x1047_Country.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
-      <a class="card" href="#">
+      <a data-aos="zoom-in" class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');"></div>
         <div class="card__content">
         </div>
       </li>
-      <a class="card" href="#">
+      <a data-aos="zoom-in" class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/123.jpg');"></div>
         <div class="card__content">
         </div>
