New vid + Visueel concept

--- a/Code/index.html
+++ b/Code/index.html
@@ -16,6 +16,7 @@
   <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
 
   <!-- Stylesheets -->
+  <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +34,7 @@
     <ul class="list">
       <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Skills</a></li>
-      <li><a href="#">Blog</a></li>
+      <li><a href="blog.html">Blog</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </div>
@@ -48,8 +49,7 @@
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
-      <video src="/Foto's/Walking Around The Forest.mp4" type="video/mp4" autoplay="autoplay" loop="true"
-        muted="true"></video>
+      <video src="../Foto's/video.mp4" type="video/mp4" autoplay="autoplay" muted="true" loop="true"></video>
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
@@ -61,22 +61,22 @@
 
   <section class="hero-section" >
     <div class="card-grid">
-      <a data-aos="zoom-in" class="card" href="#">
+      <a  class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
-      <a data-aos="zoom-in" class="card" href="#">
+      <a class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/577x1047_Country.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
-      <a data-aos="zoom-in" class="card" href="#">
+      <a  class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');"></div>
         <div class="card__content">
         </div>
       </li>
-      <a data-aos="zoom-in" class="card" href="#">
+      <a class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/123.jpg');"></div>
         <div class="card__content">
         </div>
@@ -145,20 +145,12 @@
             I love learning. If you use programming languages or tools that I have not already mastered, I probably
             already heard about it and I definitely am confident that I can quickly become proficient with it.
             <br><br>
-            Still wanna know more?
-          
+      
           </p>
         </div>
       </div>
     </section>
   </section>
-
-
-  <footer>
-    <div class="container text-center">
-      <small>Copyright &copy; Jamie Vos</small>
-    </div>
-  </footer>
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
