--- a/Code/blog.html
+++ b/Code/blog.html
@@ -37,10 +37,10 @@
       <i class="fas fa-times"></i>
     </label>
     <ul class="list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Skills</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="landing_page">
