--- a/Code/index.html
+++ b/Code/index.html
@@ -33,9 +33,9 @@
     </label>
     <ul class="list">
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Skills</a></li>
+      <li><a href="skills.html">Skills</a></li>
       <li><a href="blog.html">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="landing_page">
@@ -61,7 +61,7 @@
 
   <section class="hero-section" >
     <div class="card-grid">
-      <a  class="card" href="#">
+      <a  class="card" href="post-page.html">
         <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');"></div>
         <div class="card__content">
         </div>
