--- a/Code/index.html
+++ b/Code/index.html
@@ -82,7 +82,7 @@
         </div>
       </a>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div> -->
         <div class="card__content">
         </div>
       </a>
@@ -154,6 +154,15 @@
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
+  <!-- <div class="footer container">
+    <p>&#169; Jamie Vos</p>
+    <div class="social">
+        <a href="#"><i class='bx bxl-facebook'></i></a>
+        <a href="#"><i class='bx bxl-twitter'></i></a>
+        <a href="#"><i class='bx bxl-instagram'></i></a>
+        <a href="#"><i class='bx bxl-linkedin'></i></a>
+    </div>
+</div> -->
 
   <!-- Javascript + Animate library-->
 
