--- a/Code/skills.html
+++ b/Code/skills.html
@@ -5,8 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
+    <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
+    <link rel="stylesheet" href="Css/skills.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+
 </head>
 <body>
-    
+
+    <input type="checkbox" name="" id="menuBtn">
+  <div class="menu_overlay">
+    <label for="menuBtn">
+      <i class="fas fa-times"></i>
+    </label>
+    <ul class="list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="skills.html">Skills</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+  <div class="landing_page">
+    <div class="menu">
+      <label for="menuBtn">
+        <i class="fas fa-bars"></i>
+      </label>
+    </div>
+  </div>
+
+    <div class="skills">
+        <div class="container">
+            <div class="text">
+                <h2><span>My</span>Skils</h2>
+                <p>My Experience and skills in computer science</p>
+            </div>
+
+            <div class="skill-card">
+                <div class="card">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <h4>Front-end</h4>
+                    <p>
+                        HTML <br> CSS <br> Javascript <br> React
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas fa-magic"></i>
+                    <h4>Back-end</h4>
+                    <p>
+                        Python <br> PHP <br> C# <br> C++
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <h4>Frameworks</h4>
+                    <p>
+                        Laravel <br> Angular <br> jQuery <br> NET Core
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <h4>Design</h4>
+                    <p>
+                        Photoshop <br> XD <br> Maya <br> Blender
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <h4>Coding</h4>
+                    <p>
+                        Algorithms <br> Databases <br> Abstract Thinking <br> Good memory 
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <h4>Professional Skills</h4>
+                    <p>
+                        Communication <br> Collaboration/teamwork <br> Time management <br> Creativity
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="Js/app.js"></script>
 </body>
 </html>
