Cards een project gegeven

--- a/Code/index.html
+++ b/Code/index.html
@@ -77,47 +77,27 @@
         </div>
       </li>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url('../Foto\'s/123.jpg');"></div>
+        <div class="card__background" style="background-image: url('../Foto\'s/12.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div> -->
+        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-1.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-3.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-4.jpg');"></div>
         <div class="card__content">
         </div>
       </a>
