--- a/Code/index.html
+++ b/Code/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
-      <h1>Hello stranger... <br>Its okay, you can<br> scroll down. <span>🎃</span></h1>
+      <h1>Hello stranger... <br>It's okay, you can<br> scroll down. <span>🎃</span></h1>
       <!-- <p> <span class="p-curl">{</span> <span class="italic">I'm Jamie, a 2004 child and like many born of the generation, my relationship with coding started the
         day I was born.<br> In this portfolio, I document my journey into coding. </span> <span class="p-curl"> } </span> </p> -->
     </div>
